tests/ui/drop/nonsense-drop-impl-issue-139278.stderr
error[E0438]: const `SPLOK` is not a member of trait `Drop`
  --> $DIR/nonsense-drop-impl-issue-139278.rs:5:5
   |
LL |     const SPLOK: u32 = 0;
   |     ^^^^^^^^^^^^^^^^^^^^^ not a member of trait `Drop`

error[E0046]: not all trait items implemented, missing: `drop`
  --> $DIR/nonsense-drop-impl-issue-139278.rs:4:1
   |
LL | / impl Drop for Foo {
LL | |     const SPLOK: u32 = 0;
LL | | }
   | |_^
   |
   = note: default implementation of `drop` is unstable
   = note: use of unstable library feature `pin_ergonomics`
   = note: see issue #130494 <https://github.com/rust-lang/rust/issues/130494> for more information
   = help: add `#![feature(pin_ergonomics)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0046, E0438.
For more information about an error, try `rustc --explain E0046`.
